# parser_system_design

./: AGENTS.md  README.md
docs/: FILE_SUMMARY.md
docs/api/: api_design.md  openapi.json
docs/architecture/: connector_parser_architecture.md  enricher_diagrams.md  pipeline-diagram.drawio  pipeline-diagram.excalidraw
docs/business/: mro_features.json
docs/database/: MMS_Complete_Package.md  enriched_metadata_schema.json
docs/design/: parser_enricher_design.md  plan.md
enricher/: AGENTS.md
enricher/rules/: name_dictionary.yaml
metadata_enrichment_engine/: .env  README.md  conftest.py  pyproject.toml
metadata_enrichment_engine/samples/: clinic_db.txt  config.yaml  enriched_output_sample.json
metadata_enrichment_engine/src/: cli.py
metadata_enrichment_engine/src/enrichers/: alert_generator.py  compliance_classifier.py  domain_mapper.py  glossary_generator.py  name_enricher.py  process_discovery.py  relationship_discovery.py  usecase_generator.py
metadata_enrichment_engine/src/models/: metadata.py
metadata_enrichment_engine/src/output/: json_serializer.py
metadata_enrichment_engine/src/parser/: config_loader.py  txt_parser.py
metadata_enrichment_engine/src/pipeline/: enrichment_pipeline.py
metadata_enrichment_engine/tests/: test_config_loader.py  test_enrichers.py  test_enrichment_pipeline.py  test_txt_parser.py
